# agentic-ai

./: README.md  requirements.txt
financial-agent/notebooks/: test1.ipynb
financial-agent/source/: agent_test.py
fintech-ai-bot/: .gitignore  Procfile  pyproject.toml
fintech-ai-bot-1.0/app/: agent.py  faiss_db.py
fintech-ai-bot-1.0/app/static/: style.css
fintech-ai-bot-1.0/app/template/: index.html
fintech-ai-bot-1.0/data/: database_export.sql
fintech-ai-bot/.streamlit/: config.toml
fintech-ai-bot/app/: agent.py  azure_postgres.py  faiss_db.py  main.py  utils.py
fintech-ai-bot/data/: data_generator.py  database_export.sql  tables_create.sql
fintech-ai-bot/data/products/: latest_updates.csv
fintech-ai-bot/database-scripts/: data_update.sql
fintech-ai-bot/faiss/: documents.json  faiss_index
fintech-ai-bot/notebooks/: test.ipynb
fintech-ai-bot/scripts/: data_generator.py
fintech-ai-bot/src/fintech_ai_bot/: config.py  main.py  utils.py
fintech-ai-bot/src/fintech_ai_bot/agents/: __init__.py  base.py  coordinator.py  financial.py  news.py
fintech-ai-bot/src/fintech_ai_bot/core/: __init__.py  orchestrator.py
fintech-ai-bot/src/fintech_ai_bot/db/: __init__.py  postgres_client.py
fintech-ai-bot/src/fintech_ai_bot/ui/: __init__.py  chat_interface.py  sidebar.py
fintech-ai-bot/src/fintech_ai_bot/vector_store/: __init__.py  faiss_client.py
